[package]
name = "storir"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
hound = "3.5.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"



